# Ecom

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: .env  .gitignore  .pre-commit-config.yaml  bandit_log_!timestamp!.txt  manage.py  requirements.txt
core/core/: db.sqlite3  pytest.ini  urls.py
core/core/cart/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/core/cart/migrations/: 0001_initial.py  0002_order_orderitem.py  0002_remove_cartitem_user_cartitem_saved_for_later_and_more.py  0003_remove_cartitem_product_cartitem_product_line.py  0003_transaction_shippinginfo.py
core/core/product/: admin.py  models.py  serializers.py  views.py
core/core/product/migrations/: 0001_initial.py
core/core/services/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/core/settings/: base.py  local.py
